Preserve units defined in biome temp configs
Took 2 minutes